Add contact and edit

--- a/www/index.html
+++ b/www/index.html
@@ -7,9 +7,14 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="./css/ContactsContainer.css">
 </head>
-<body>
+<body route="/">
+    <main></main>
 </body>
+<script src="delegated.js"></script>
+<script src="main.js"></script>
 <script src="localStorage.js"></script>
+<script src="EditContact.js"></script>
 <script src="Contact.js"></script>
 <script src="ContactsContainer.js"></script>
+<script src="CreateContact.js"></script>
 </html>
