History stuff and routes

--- a/www/index.html
+++ b/www/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="./css/ContactsContainer.css">
+    <link rel="stylesheet" type="text/css" href="/css/ContactsContainer.css">
 </head>
 <body>
     <main></main>
 </body>
 <script src="/delegated.js"></script>
 <script src="/localStorage.js"></script>
+<script src="/Contact.js"></script>
+<script src="/HistoryContact.js"></script>
 <script src="/EditContact.js"></script>
 <script src="/main.js"></script>
-<script src="/Contact.js"></script>
 <script src="/ContactsContainer.js"></script>
 <script src="/CreateContact.js"></script>
 </html>
